Avoid overflow

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.6;
   word-break: normal;
   overflow-wrap: break-word;
+  overflow-x: hidden;
 }
 .markdown-body::after {
   content: "";
@@ -200,6 +201,7 @@ body {
   border: solid 1px #888;
   text-align: left;
   vertical-align: top;
+  word-break: break-all;
 }
 .markdown-body th {
   font-size: 95%;
@@ -403,6 +405,9 @@ body {
   font-size: unset;
   background: unset;
   line-height: 1.3;
+  white-space: inherit;
+  word-break: inherit;
+  overflow-wrap: inherit;
 }
 .markdown-body mark {
   background: #fde;
